--- a/main.html
+++ b/main.html
@@ -1,16 +1,134 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>HTML Signup Form Creation</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
 
+  <h1>Signup Form</h1>
+
+  <form id="signupForm" method="post">
+    <div class="form-group">
+      <label for="name">Name:</label>
+      <input 
+        type="text" 
+        id="name" 
+        name="name" 
+        placeholder="Name" 
+        required
+      >
+    </div>
+
+    <div class="form-group">
+      <label for="email">Email:</label>
+      <input 
+        type="email" 
+        id="email" 
+        name="email" 
+        placeholder="Email" 
+        required
+      >
+    </div>
+
+    <div class="form-group">
+      <span>Gender:</span>
+      <label for="gender_m">Male</label>
+      <input 
+        type="radio" 
+        id="gender_m" 
+        name="gender" 
+        value="Male"
+      >
+      <label for="gender_f">Female</label>
+      <input 
+        type="radio" 
+        id="gender_f" 
+        name="gender" 
+        value="Female"
+      >
+      <label for="gender_o">Other</label>
+      <input 
+        type="radio" 
+        id="gender_o" 
+        name="gender" 
+        value="Other"
+      >
+    </div>
+
+    <div class="form-group">
+      <label for="cars">Car Brands:</label>
+      <select id="cars" name="cars" required>
+        <option value="">--Please choose an option--</option>
+        <option value="Toyota">Toyota</option>
+        <option value="Ford">Ford</option>
+        <option value="Honda">Honda</option>
+        <option value="BMW">BMW</option>
+        <option value="Tesla">Tesla</option>
+      </select>
+    </div>
+
+    <div class="form-group">
+      <label for="age">Age:</label>
+      <input 
+        type="number" 
+        id="age" 
+        name="age" 
+        placeholder="Age" 
+        min="1"
+        required
+      >
+    </div>
+
+    <div class="form-group">
+      <label for="dob">DOB:</label>
+      <input 
+        type="date" 
+        id="dob" 
+        name="dob" 
+        placeholder="xxxx-xx-xxxx" 
+        required
+      >
+    </div>
+
+    <div class="form-group">
+      <label for="phone">Phone Number:</label>
+      <input 
+        type="tel" 
+        id="phone" 
+        name="phone" 
+        placeholder="xxx-xxx-xxxx" 
+        pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" 
+        required
+      >
+    </div>
+
+    <div class="form-group">
+      <label for="password">Password:</label>
+      <input 
+        type="password" 
+        id="password" 
+        name="password" 
+        placeholder="Password" 
+        required
+      >
+    </div>
+
+    <div class="form-group checkbox-group">
+      <label for="tos">
+        <input 
+          type="checkbox" 
+          id="tos" 
+          name="tos"
+        >
+        I agree to the TOS
+      </label>
+    </div>
+
+    <button type="submit" id="submitBtn">Submit</button>
+  </form>
+
+  <script src="script.js"></script>
 </body>
-
 </html>
